# flask_access_portal

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  seed.py
.github/workflows/: .pre-commit-config.yaml  pre_commit_checks.yml  release_please.yaml
app/: __init__.py  admin.py  audit.py  models.py  routes.py  rules.py
app/templates/: admin_datasets.html  admin_rules.html  approver_dashboard.html  index.html  login.html  my_requests.html  request_access.html
